[gd_scene load_steps=5 format=3 uid="uid://dbcxp3a2i0tj6"]

[ext_resource type="Script" path="res://scripts/structures/hive.gd" id="1_ayihe"]
[ext_resource type="Texture2D" uid="uid://cwuqecsmyqbcr" path="res://assets/sprites/structures/hive/hive.png" id="2_fyd88"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wo5p"]
size = Vector2(126, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6eyer"]

[node name="hive" type="Area2D" groups=["destroyable", "hives"]]
script = ExtResource("1_ayihe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2wo5p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fyd88")

[node name="InfluenceArea" type="Area2D" parent="." groups=["influence_areas"]]
collision_layer = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfluenceArea"]
shape = SubResource("RectangleShape2D_6eyer")

[node name="RadiusVisual" type="ColorRect" parent="InfluenceArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.498039, 1, 1, 0)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
